dark mode fix

--- a/src/dark.css
+++ b/src/dark.css
@@ -3,6 +3,7 @@ body{
 0.25turn
  , #000000b0, #000000, #000000);
  color: white;
+ font-family: Arial, Helvetica, sans-serif;
  font-size: 16px;
 }
   .divInfo{
